--- a/generators/doc/templates/org_simplified.jinja
+++ b/generators/doc/templates/org_simplified.jinja
@@ -1,7 +1,7 @@
-|-----------------+------------+---------------+------|
-| hierarchy level | block name | address range | size |
-|-----------------+------------+---------------+------|
+|-----------------+------------+---------------+------+-------------|
+| hierarchy level | block name | address range | size | secure attr |
+|-----------------+------------+---------------+------+-------------|
 {% for blk in get_all_blocks(top_node) -%}
-| {{get_hier_depth(blk)}} | {{get_inst_name(blk)}} | {{get_abs_addr(blk)}}-{{get_end_addr(blk)}} | {{convert_size(blk.size)}} |
+| {{get_hier_depth(blk)}} | {{get_inst_name(blk)}} | {{get_abs_addr(blk)}}-{{get_end_addr(blk)}} | {{convert_size(blk.size)}} | {{get_secure_attr(blk)}} |
 {% endfor -%}
-|-----------------+------------+---------------+------|
+|-----------------+------------+---------------+------+-------------|
