--- a/templates/template.rdl
+++ b/templates/template.rdl
@@ -7,11 +7,11 @@
 addrmap template_slv {
     hj_genslv = true;
     name = "template_slv";
-    desc = "[Reserved for editing]";
+    desc = "Reserved for editing";
 
     signal {
         name = "srst_10";
-        desc = "[Reserved for editing]";
+        desc = "Reserved for editing";
         activehigh;
     } srst_10;
 
@@ -24,7 +24,7 @@ addrmap template_slv {
         // field definitions start here
         field {
             name = "FIELD_1";
-            desc = "[Reserved for editing]";
+            desc = "Reserved for editing";
             sw = r; onread = rclr;
             hw = rw;
             hj_syncresetsignal = "srst_10";
@@ -32,14 +32,14 @@ addrmap template_slv {
 
         field {
             name = "FIELD_2";
-            desc = "[Reserved for editing]";
+            desc = "Reserved for editing";
             sw = rw; onread = rset; onwrite = woset;
             hw = rw; hwclr;
         } FIELD_2[16:14] = 0x0;
 
         field {
             name = "FIELD_3";
-            desc = "[Reserved for editing]";
+            desc = "Reserved for editing";
             sw = rw; onwrite = wot;
             hw = rw; hwset;
         } FIELD_3[13:13] = 0x1;
