--- a/test/test_alias.rdl
+++ b/test/test_alias.rdl
@@ -7,9 +7,7 @@ addrmap root_map {
         field {hw=w;} FIELD_3[13:13] = 0x1;
     };
     reg tem_alias_2{
-        field {hw=w;} FIELD_1[17:17] = 0x0;
-        field {hw=w;} FIELD_2[16:14] = 0x0;
-        field {hw=w;} FIELD_3[13:13] = 0x1;
+        field {hw=r;} FIELD_1[31:0] = 0x0;
     };
     addrmap flatten_map {
         hj_flatten_addrmap = true;
